styles: change app background color, align footer with rest of app and fix width and position of header menu

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 
 #root {
