--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   color: lightslategray;
   font-size: 0.6rem;
-  width: 80%;
+  width: 85%;
 }
 
 .footerContent > ul {
