--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -47,6 +47,12 @@
   color: white;
 }
 
+@media (max-width: 420px) {
+  .headerLoginBar .loginContent .greetMsgContainer{
+    display: none;
+  }
+}
+
 @media (min-width: 420px) {
   .greetMsgContainer > .menuBurger {
     display: none;
@@ -73,7 +79,7 @@
   .loginContent {
     display: flex;
     color: lightgray;
-    width: 90%;
+    width: 85%;
     justify-content: flex-end;
   }
 
@@ -85,7 +91,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    gap: 0.2rem;
     font-size: 0.7rem;
     position: relative;
   }
